# STLM-maps

./: .gitattributes  .gitignore  0_analyse_trigger.py  10_local_maxima  11_local_maxima_map.py  1_correct_and_save_spectra.py  2-Plot_raw_spectra.py  2_plot_raw_spectra.py  3-Remove_noise_PCA.py  3_remove_noise_PCA.py  4-Plot_PCA_spectra.py  4_plot_PCA_spectra.py  5-Create_gif.py  5_create_gif.py  6-Fitting_data.py  6_fitting_data.py  7-Fits_maps.py  7_fits_maps.py  8_integrate_intensity.py  9_max_pos.py  Clean_EA.py  Fit_functions.py  Images_functions.py  NMF-test1.py  PCA_functions.py  README.md  bump_steerable_wavelet.py  filters.7z  fit_functions.py  main.py  plot_functions.py  pyproject.toml  requirements.txt  utils_EA_0.py
Demo_Data/: Data_parameters.txt
Demo_Data/STL_8/: Wavelength.npy
