
[project]
name = "stlm-maps"
version = "0.1.0"
description = "STLM acquisition data workflow"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "docopt==0.6.2",
    "fonttools==4.63.0",
    "idna==3.18",
    "joblib==1.5.3",
    "kiwisolver==1.5.0",
    "matplotlib==3.10.9",
    "narwhals==2.22.1",
    "numpy==2.4.6",
    "packaging==26.2",
    "pillow==12.2.0",
    "pipreqs==0.4.13",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "requests==2.34.2",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "urllib3==2.7.0",
    "yarg==0.1.10",
]

[dependency-groups]
dev = ["ruff>=0.4.0"]
 
# ---------------------------------------------------------------------------
# Ruff — linter & formateur
# Doc : https://docs.astral.sh/ruff/configuration/
# ---------------------------------------------------------------------------
 
[tool.ruff]
line-length = 88
 
[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
 
ignore = ["E501", "E741"]
 
[tool.ruff.lint.isort]
known-first-party = ["stlm-maps"]   # ← remplacer par le nom de votre package
 
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
 